--- a/tanya.html
+++ b/tanya.html
@@ -1,4 +1,4 @@
 <HEAD>
 <TITLE> THIS IS MY PAGE </TITLE>
 </HEAD>
-<CENTER> HEY EVERYONE! I AM TANYA </CENTER>
+<CENTER> HEY EVERYONE! I AM TANYA <CENTER>
