--- a/tanya.html
+++ b/tanya.html
@@ -1,4 +1,3 @@
 <HEAD>
-<TITLE> THIS IS MY PAGE </TITLE>
-</HEAD>
-<CENTER> HEY EVERYONE! I AM TANYA <CENTER>
+<TITLE> THIS IS MY PAGE 
+<CENTER> HEY EVERYONE! I AM TANYA 
