--- a/tanya.html
+++ b/tanya.html
@@ -3,6 +3,7 @@
 <CENTER> 
 <h1>HEY EVERYONE! I AM TANYA</h1><br>
 <h2>This is my webpage for DevOps Assembly lines Task 3 </h2><br>
+<img src="https://www.google.co.in/url?sa=i&url=https%3A%2F%2Fstackoverflow.com%2Fquestions%2F31331789%2Fgrayish-line-appearing-around-background-image-of-a-div&psig=AOvVaw0wWrlE15O-sZoAqKxUKzzd&ust=1593091358560000&source=images&cd=vfe&ved=0CAIQjRxqFwoTCKicj_bFmuoCFQAAAAAdAAAAABAI" height=500 />
    Its successfully deployed!
  </CENTER>
 </body> 
